--- a/public/style.css
+++ b/public/style.css
@@ -204,7 +204,7 @@ body{
 
 
 .default_message.wrong {
-    background-color: #ff3c3c;
+    background-color: #ce6662;
     color: rgb(255, 255, 255);
     max-width: 90%;
 }
@@ -216,7 +216,7 @@ body{
 .white_background {
     background-color: rgba(255, 255, 255, 0.596);
     position:fixed;
-    
+    backdrop-filter: blur(5px);
     left:0;
     bottom: 0;
     top:0;
