--- a/src/Home.css
+++ b/src/Home.css
@@ -222,6 +222,10 @@ body {
 border: 1px solid #b9b9b9;
 margin: -1px;
 }
+.Home.Game_Background.v1 {
+    border: none;
+    margin: 0;
+    }
 @media (max-width: 450px) {
     .Home_Game_Title {
         font-size: 25px;  
