--- a/public/style.css
+++ b/public/style.css
@@ -308,3 +308,14 @@ html, body {
 #Footer_decal {
     padding-bottom: 44px;
 }
+
+.button.like {
+    font-weight: bold;
+    padding: 8px 40px;
+    color: #b61a41;
+    background-color: transparent;
+    margin-bottom: -25px;
+    text-decoration: none;
+    border: 2px solid #b61a41;
+    border-radius: 90px;
+}
