--- a/public/style.css
+++ b/public/style.css
@@ -254,6 +254,10 @@ body{
     border: 2px solid #2ea0e8;
     border-radius: 90px;
 }
+.button.view.clicked {
+    background-color: #2ea0e8;
+    color: white;
+}
 .button.Next {
     font-weight: bold;
     padding: 8px 40px;
