--- a/src/pages/informations/informations.css
+++ b/src/pages/informations/informations.css
@@ -80,6 +80,7 @@
     left: 0;
     width: 130px;
     height: 130px;
+    border-radius: 12px;
 }
 .Infos.partner-i.v2 {
     background: url("https://night-api.com/images/Logo/logo.png");
@@ -89,6 +90,12 @@
 }
 .Infos.partner-i.v3 {
     background: url("https://www.lemondedupc.fr/assets/images/favicons/favicon-192x192.png");
+    background-position: center;
+    background-repeat  : no-repeat;
+    background-size    : cover;
+}
+.Infos.partner-i.v4 {
+    background: url("./partners_img/fouderix.png");
     background-position: center;
     background-repeat  : no-repeat;
     background-size    : cover;
