--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -261,7 +261,8 @@
     border-radius: 12px;
     background-position: center;
     background-repeat  : no-repeat;
-    background-size    : cover;
+    background-size    : 90%;
+    cursor: pointer;
 }
 
 .Profile.Inventory.Title {
