--- a/public/style.css
+++ b/public/style.css
@@ -73,6 +73,11 @@ body{
     height: 1px;
     background-color: #737373;
 }
+.hr_4 {
+    width: 50px;
+    height: 3px;
+    background-color: #0E76B8;
+}
 .link {
     text-decoration: none;
     color: #0E76B8;
@@ -231,6 +236,9 @@ body{
     z-index: 10;
 }
 .button {
+    cursor: pointer;
+}
+.Button {
     cursor: pointer;
 }
 .button.ok {
