--- a/public/style.css
+++ b/public/style.css
@@ -339,7 +339,7 @@ body{
     font-weight: bold;
     color: #40464e;
     padding: 12px;
-    margin: 60px 20px 20px 20px;
+    margin: 60px 20px 20px;
 }
 .shadow_2 {
     box-shadow: 4px 3px 6px 0 rgba(46, 161, 255, 0.5);
