--- a/src/pages/games/Games.css
+++ b/src/pages/games/Games.css
@@ -35,7 +35,7 @@
     width: 100%;
     display: inline-flex;
     flex-wrap: wrap;
-    padding: 0 10px 10px 10px;
+    padding: 0 10px 10px;
     align-items: center;
     justify-content: center;
 }
@@ -61,7 +61,6 @@
 }
 
 .Games.decription {
-    padding: 25px;
     width: 100%;
     padding: 10px;
     color: rgb(24, 25, 27);
