--- a/src/pages/informations/informations.css
+++ b/src/pages/informations/informations.css
@@ -7,7 +7,7 @@
     font-weight: bold;
     color: rgb(255, 255, 255);
     background-color: #2ea0e8;
-    padding: 10px 30px 10px 30px;
+    padding: 10px 30px;
     width: fit-content;
     border-radius: 9px;
 }
