--- a/src/pages/welcome/Welcome.css
+++ b/src/pages/welcome/Welcome.css
@@ -45,7 +45,6 @@
 }
 
 .Welcome.Color_picker[type="color"]::-webkit-color-swatch {
-	border: none;
     border-radius:4px;
     border: 2px solid #b9b9b9;
 }
@@ -69,7 +68,6 @@
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
-    margin-top: 15px;
     position: absolute;
     right: 20px;
     margin-top: -35px;
@@ -119,7 +117,6 @@
     border-radius: 12px;
 }
 .Welcome.profile_tool_bar2_item_button {
-    background-color: transparent;
     border: none;
     float: left;
     margin-top:-3px;
@@ -139,7 +136,6 @@
 }
 .Welcome.Background.v4 {
     background-color: rgb(53, 53, 53);
-    width: 0;
     bottom: 0;
     height: 100%;
     right: none;
@@ -252,7 +248,6 @@
     } 
 }
 .Circle.v6 {
-    top: 270px;
     z-index: -1;
     animation: 5s Transition_circle_6;
     background-color: #2ea0e8;
@@ -350,7 +345,7 @@
     top: 150px;
     bottom: 100px;
     width: 250px;
-    padding:0 20px 0 20px;
+    padding:0 20px;
 }
 .Welcome.profile_tool_bar_elements {
     background-color: white;
@@ -360,7 +355,7 @@
     top: 25px;
     bottom: 25px;
     width: 400px;
-    padding:0 20px 0 20px;
+    padding:0 20px;
 }
 @media (max-width: 860px) {
     .Welcome.Title_1 {
@@ -424,9 +419,6 @@
 .Welcome.profile_tool_bar_elements {
     display: none;
 }
-.Welcome.profile_tool_bar_colors {
-    width: 200px;
-}
 .Welcome.Canvas {  
     margin-left: auto;
     margin-right: 0;
@@ -442,7 +434,8 @@
     position: absolute;
     left: 0;
     height: fit-content;
-    padding:  15px 15px 15px 15px;
+    padding:  15px;
+    width: 200px;
 }
 .Welcome.profile_tool_bar {
     margin-left: 0;
@@ -471,7 +464,6 @@
     }
     .Welcome.profile_tool_bar_color_show {
         display: block;
-        background-color: transparent;
         border: none;
         margin-top:-3px;
         background-color: white;
