Code optimization (css)

--- a/src/Home.css
+++ b/src/Home.css
@@ -176,7 +176,7 @@ body {
 }
 
 .Home_Game {
-    margin: 25px 25px 25px 25px;
+    margin: 25px;
     border-radius: 12px;
     padding: 30px;
     width: 370px;
