--- a/src/pages/informations/informations.css
+++ b/src/pages/informations/informations.css
@@ -63,7 +63,7 @@
         width: calc(100% - 20px);
     }
     .Infos.partners-contener {
-        padding: 20px 0 0 0;
+        padding: 20px 0 0;
     }
     .Infos.partner-title {
         font-size: 18px;
