--- a/public/style.css
+++ b/public/style.css
@@ -96,6 +96,13 @@ body{
     border-radius: 4px;
     border: 1px solid #b9b9b9;
 }
+
+@media (max-width: 600px) {
+  .form-container {
+    margin: 4px auto 200px;
+  }
+}
+
 .form-container h2 {
     font-size: 24px;
     font-weight: 700;
