--- a/public/style.css
+++ b/public/style.css
@@ -99,10 +99,15 @@ body{
 
 @media (max-width: 600px) {
   .form-container {
-    margin: 50px auto 200px;
+    width: 95%;
   }
 }
-
+@media (max-width: 376px) {
+    .form-container {
+      width: 100%;
+      padding: 3px;
+    }
+  }
 .form-container h2 {
     font-size: 24px;
     font-weight: 700;
