--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: white;
+  overflow-x: hidden;
+  overflow-y: scroll
 }
 
 code {
@@ -29,12 +32,6 @@ BLUE_2 : #7CD8FF
 }
 html {
   scroll-behavior: smooth;
-}
-body{
-  margin: 0;
-  background: white;
-  overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .topbar {
