✨ Improvement of the title on the homepage on small screens

--- a/src/Home.css
+++ b/src/Home.css
@@ -142,6 +142,9 @@ body {
     .Home_Sub_Title {
         font-size: 45px;
     }
+    .Home_Title {
+        margin-top:-50px
+    }
 }
 @media (max-width: 740px) {
     .Strip_3 {
