--- a/src/elements/Footer.css
+++ b/src/elements/Footer.css
@@ -4,9 +4,8 @@
         -webkit-box-shadow: 4px 3px 6px 0 rgba(0, 0, 0, 0.062);
         -moz-box-shadow: 4px 3px 6px 0 rgba(0, 0, 0, 0.062);
         box-shadow: 0 3px 6px 10px rgba(0, 0, 0, 0.062);
-        height: 44px;
+        min-height: 44px;
         position: absolute;
-        bottom: 0;
         left: 0;
         width: 100%;
     }
@@ -23,11 +22,6 @@
     .footer.line {
         margin-left: auto;
         margin-right: auto;
-    }
-
-    @media (max-width: 600px) {
-        .footer.line {
-            display: block;
-        }
+        display: block;
     }
 
