--- a/public/style.css
+++ b/public/style.css
@@ -425,16 +425,17 @@ html, body {
 }
 
 .ErrorBannerSwitchDomain.contnainer {
-    background-color:#64ccf8;
-    padding: 6px 30px;
-    -webkit-box-shadow: 0 3px 6px 0 rgba(0,0,0,0.3);
-    -moz-box-shadow: 0 3px 6px 0 rgba(0,0,0,0.3);
-    box-shadow: 0 3px 6px 0 rgba(0,0,0,0.3);
+    background: rgba(0, 153, 255, 0.438);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
     position: absolute;
     top: 80px;
     left: 0;
     right: 0;
     z-index: 4;
+    padding: 15px;
 }
 .ErrorBannerSwitchDomain.text {
     color: white;
