--- a/public/style.css
+++ b/public/style.css
@@ -83,19 +83,25 @@ body{
     text-decoration: none;
     color: #0E76B8;
     font-weight: bold;
+    padding: 5px;
 }
 
 
 
 /* CONTACTS */
 .form-container {
-    background: white;
     margin: 50px auto 200px;
     width: 70%;
     padding: 20px;
     color: rgb(53, 53, 53);
     border-radius: 4px;
     border: 1px solid #b9b9b9;
+    background: rgba(255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.116);
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 @media (max-width: 600px) {
@@ -105,8 +111,8 @@ body{
 }
 @media (max-width: 376px) {
     .form-container {
-      width: 100%;
-      padding: 20px 3px;
+      width: 97%;
+      padding: 20px 6px;
       border:none;
     }
   }
