--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,10 @@ body {
   box-shadow: 4px 3px 6px 0 rgba(0, 0, 0, 0.329);
 }
 
-
+.Global.Icon.Medium {
+  width: 80px;
+  height: 80px;
+}
 
 .hr {
   width: 100%;
