--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ body {
   transition: 0.4s;
   transition-delay: 0.4s;
   border: 1px solid rgba(255, 255, 255, 0);
+  min-height: 80px;
 }
 
 #navbar {
@@ -90,6 +91,11 @@ body {
 .Global.Icon.Medium {
   width: 80px;
   height: 80px;
+}
+
+.Global.Break {
+  flex-basis: 100%;
+  height: 0;
 }
 
 .hr {
@@ -423,10 +429,9 @@ body {
   background-color: #2ea0e8;
   width: fit-content;
   padding: 10px;
-  transform: rotate(-5deg);
 }
 .Title_2.v2 {
-  transform: rotate(1deg);
+
 }
 
 .Subtitle_1 {
