--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,7 @@ BLUE_2 : #7CD8FF
 * {
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
-  font-weight: 500;
-}
+  font-weight: 500;}
 html {
   scroll-behavior: smooth;
 }
@@ -64,7 +63,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 60px;
+  margin: 0 10px 0 10px;
   z-index: 2;
   padding: 3px;
 }
@@ -96,6 +95,28 @@ body {
 .Global.Break {
   flex-basis: 100%;
   height: 0;
+}
+
+.Global.Title {
+  text-align: center;
+  font-size: 40px;
+  color: rgb(53, 53, 53);
+  font-weight: bold;
+} 
+.Global.Title.v2 {
+  margin:25px;
+  font-weight: bold;
+  color: #ffffff;
+  font-size: 40px;
+  background-color: #2ea0e8;
+  width: fit-content;
+  padding: 10px;
+} 
+@media (max-width: 600px) {
+  .Global.Title.v2 {
+    margin: 25px;
+    width: calc(100% - 50px);
+  } 
 }
 
 .hr {
@@ -148,6 +169,7 @@ body {
   width: 95%;
 }
 }
+
 @media (max-width: 376px) {
   .form-container {
     width: 97%;
@@ -430,10 +452,6 @@ body {
   width: fit-content;
   padding: 10px;
 }
-.Title_2.v2 {
-
-}
-
 .Subtitle_1 {
   text-align: center;
   font-size: 26px;
@@ -484,7 +502,7 @@ html, body {
   border: 2px solid #e66a89;
   border-radius: 90px;
 }
-@media (max-width: 374px) {
+@media (max-width: 348px) {
   .NavBar_Profile_Button {
       display: none;
   }
