--- a/src/Home.css
+++ b/src/Home.css
@@ -193,9 +193,23 @@ body {
     -webkit-backdrop-filter: blur( 4px );
     border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
-@media (max-width: 450px) {
+.Description {
+    margin: 25px auto;
+    padding: 25px;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.2 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    width: fit-content;
+}
+@media (max-width: 840px) {
     .Home_Game {
-        width: calc(100% - 50px);
+        width: calc(100vw - 50px);
+    }
+    .Description {
+        width: calc(100vw - 50px);
+        margin: 25px
     }
 }
 .Home_Game_Title {
@@ -276,17 +290,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-}
-
-.Description {
-    margin: 25px;
-    padding: 25px;
-    background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.2 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-    width: fit-content;
+    justify-content: center;
 }
 
 .Description2 {
